tests/hevm/fail/redundant/redundant.act
contract A

constructor()

creates

  uint x := 0

transition f()

iff

  x == 1

updates

  x := 2